# bevy-design-patterns

./: CONTENT.md  Cargo.toml  README.md
.github/workflows/: ci.yaml
patterns/better-states-alt/: Cargo.toml
patterns/better-states-alt/src/: lib.rs
patterns/better-states-alt/src/states/: app.rs  gameplay.rs  mod.rs  running.rs
patterns/component_installer/: Cargo.toml  README.md
patterns/component_installer/src/: main.rs
patterns/deferred_spawn/: Cargo.toml  README.md
patterns/deferred_spawn/src/: simple.rs
patterns/dependency_hook/: Cargo.toml  README.md
patterns/dependency_hook/src/: main.rs
patterns/entity-installer/: Cargo.toml  README.md
patterns/entity-installer/src/: lib.rs
patterns/event_bridge/: Cargo.toml  README.md
patterns/event_bridge/src/: main.rs
patterns/instant-states-hierarchy/: Cargo.toml  README.md
patterns/instant-states-hierarchy/src/: lib.rs
patterns/lazy-states-hierarchy/: Cargo.toml  README.md
patterns/lazy-states-hierarchy/src/: lib.rs
patterns/propagating-states-hierarchy/: Cargo.toml  README.md
patterns/propagating-states-hierarchy/src/: lib.rs
patterns/state-scoped-entities/: Cargo.toml  README.md
patterns/state-scoped-entities/src/: lib.rs
patterns/template/: Cargo.toml
template/: README.md
template/src/: lib.rs
