[package]
name = "deferred_spawn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.14"

[[bin]]
name = "deferred_spawn_simple"
path = "src/simple.rs"

[[bin]]
name = "deferred_spawn_complex"
path = "src/complex.rs"
